fix(components): Scrollbar changes. Custom dot icon added.

--- a/centreon-frontend/centreon-ui/src/Icon/IconHeader/icon-header.scss
+++ b/centreon-frontend/centreon-ui/src/Icon/IconHeader/icon-header.scss
@@ -124,6 +124,7 @@
   &-wrap {
     margin-right: 6px;
     cursor: pointer;
+    position: relative;
   }
 }
 .icon {
