--- a/centreon-frontend/centreon-ui/src/ScrollBar/scroll-bar.scss
+++ b/centreon-frontend/centreon-ui/src/ScrollBar/scroll-bar.scss
@@ -22,5 +22,9 @@
       width: 100% !important;
       max-height: 368px;
     }
+    div:last-child {
+      left: auto !important;
+      right: 0 !important;
+    }
   }
 }
